# QuestionPDFGeneration

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py
data/input/: web.txt
src/: text_extraction.py
templates/: qcm.css  qcm.html
