[tool.poetry]
name = "questionpdfgenerator"
version = "0.1.0"
description = "Generate pdf from txt extracted from quizlet"
authors = ["Abdessamad ANSSEM <abdoanss@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
reportlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
